fix banner overflow on small screens

--- a/Components/Banner.module.css
+++ b/Components/Banner.module.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   border: 2px solid black;
   width: 400px;
+  max-width: 100%;
   margin-bottom: 10px;
 }
 
